[package]
name = "launcher-core"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
net = { path = "../modules/net", version = "*", package = "launcher-net" }
persistence = { path = "../modules/persistence", version = "*", package = "launcher-persistence" }
utils = { path = "../modules/utils", version = "*", package = "launcher-utils" }

# Core dependencies
flate2 = "1"
reqwest = { version = "0.11", features = ["stream", "json"] }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
tar = "0.4"
tokio = { version = "1", features = ["full", "tracing"] }
toml = "0.7"
xz2 = { version = "0.1", features = ["tokio"] }
zip = "0.6"

# Utilities
anyhow = "1"
async_once = "0.2.6"
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
directories = "5"
futures-util = "0.3"
hex = { version = "0.4", features = ["serde"] }
lazy_static = "1"
os_info = "3"
platforms = { version = "3", features = ["serde"] }
semver = { version = "1", features = ["serde"] }
sha1 = "0.10"
sha2 = "0.10"
tempfile = "3"
tracing = "0.1"
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
zeroize = "1"
