[package]
name = "launcher-core"
version = "0.0.1"
edition = "2024"
license = "GPL-3.0-or-later"
publish = false

[features]
silo = ["data/silo", "fetch/silo"]

[dependencies]
auth = { path = "../modules/auth", version = "*", package = "launcher-auth" }
data = { path = "../modules/data", version = "*", package = "launcher-data" }
fetch = { path = "../modules/fetch", version = "*", package = "launcher-fetch" }
macros = { path = "../modules/macros", version = "*", package = "launcher-macros" }
net = { path = "../modules/net", version = "*", package = "launcher-net" }
persistence = { path = "../modules/persistence", version = "*", package = "launcher-persistence" }
utils = { path = "../modules/utils", version = "*", package = "launcher-utils" }
