[package]
name = "silo"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
data = { path = "../modules/data", version = "*", package = "launcher-data", features = ["silo"] }
fetch = { path = "../modules/fetch", version = "*", package = "launcher-fetch", features = ["silo"] }
net = { path = "../modules/net", version = "*", package = "launcher-net" }
utils = { path = "../modules/utils", version = "*", package = "launcher-utils", default-features = false }

anyhow = "1"
async-once-cell = "0.5"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

# Core dependencies
reqwest = { version = "0.11", features = ["json", "brotli", "native-tls-alpn"] }
ron = "0.8"
serde = { version = "1", features = ["derive"] }

serde_json = "1"

# Utilities
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
indicatif = "0.17"
once_cell = "1"
platforms = { version = "3", features = ["serde"] }
semver = { version = "1", features = ["serde"] }
url = { version = "2", features = ["serde"] }
