[package]
name = "mc"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
auth = { path = "../../modules/auth", version = "*", package = "launcher-auth" }
data = { path = "../../modules/data", version = "*", package = "launcher-data" }
fetch = { path = "../../modules/fetch", version = "*", package = "launcher-fetch" }
net = { path = "../../modules/net", version = "*", package = "launcher-net" }
utils = { path = "../../modules/utils", version = "*", package = "launcher-utils" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
url = "2.5.0"
