[package]
name = "mc"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
core = { path = "../../core", version = "*", package = "launcher-core" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
url = "2.5.0"
