[package]
name = "launcher-linux"
version = "0.0.1"
license = "GPL-3.0-or-later"
edition = "2021"
publish = false

[dependencies]
gtk = { version = "0.9", package = "gtk4", features = ["v4_16"] }
adw = { version = "0.7", package = "libadwaita" }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
glib-build-tools = "0.20"
