[package]
name = "launcher-macos"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
launcher = { version = "*", path = "../../core", package = "launcher-core" }
swift-bridge = { version = "0.1", features = ["async"] }

reqwest = "0.12"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
swift-bridge-build = "0.1"
