[package]
name = "launcher-macos"
version = "0.0.1"
edition = "2024"
license = "GPL-3.0-or-later"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
launcher = { version = "*", path = "../../core", package = "launcher-core" }
swift-bridge = { version = "0.1", features = ["async"] }

reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls", "brotli", "deflate", "gzip", "json", "stream"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
swift-bridge-build = "0.1"
