[package]
name = "metagen"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
launcher = { path = "../../core", version = "*" }

# Core dependencies
reqwest = { version = "0.11", features = ["json", "brotli", "native-tls-alpn"] }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
tar = "0.4"
tokio = { version = "1", features = ["full"] }
xz2 = "0.1"

serde_json = "1"

# Utilities
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
indicatif = "0.17"
once_cell = "1"
platforms = { version = "3", features = ["serde"] }
semver = { version = "1", features = ["serde"] }
url = { version = "2", features = ["serde"] }
