[package]
name = "silo"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
launcher = { path = "../../core", version = "*", package = "launcher-core", features = ["silo"] }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

# Core dependencies
reqwest = { version = "0.12", features = ["json", "brotli", "rustls-tls"] }
ron = "0.8"
serde = { version = "1", features = ["derive"] }

# Utilities
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
indicatif = "0.17"
platforms = { version = "3", features = ["serde"] }
semver = { version = "1", features = ["serde"] }
url = { version = "2", features = ["serde"] }
