[package]
name = "launcher"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
# Core dependencies
reqwest = { version = "0.11", features = ["stream"] }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.7"

# Utilities
anyhow = "1"
async_once = "0.2.6"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
directories = "5"
futures-util = "0.3"
hex = { version = "0.4", features = ["serde"] }
lazy_static = "1"
os_info = "3"
platforms = { version = "3", features = ["serde"] }
sha1 = "0.10"
sha2 = "0.10"
semver = { version = "1", features = ["serde"] }
url = { version = "2", features = ["serde"] }
