[package]
name = "ffi"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false
crate-type = ["staticlib"]

[features]
ffi-swift = ["dep:swift-bridge"]

[dependencies]
launcher = { version = "*", path = "../core" }
swift-bridge = { version = "0.1", optional = true }

[build-dependencies]
swift-bridge-build = "0.1"
