[package]
name = "launcher-auth"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
data = { path = "../data", version = "*", package = "launcher-data" }
net = { path = "../net", version = "*", package = "launcher-net" }
persistence = { path = "../persistence", version = "*", package = "launcher-persistence" }

async-once-cell = "0.5"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
once_cell = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
