[package]
name = "launcher-fetch"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
data = { path = "../data", version = "*", package = "launcher-data" }
net = { path = "../net", version = "*", package = "launcher-net" }
persistence = { path = "../persistence", version = "*", package = "launcher-persistence" }
utils = { path = "../utils", version = "*", package = "launcher-utils" }

thiserror = "1"
