[package]
name = "launcher-fetch"
version = "0.0.1"
edition = "2024"
license = "GPL-3.0-or-later"
publish = false

[features]
silo = []

[dependencies]
data = { path = "../data", version = "*", package = "launcher-data" }
net = { path = "../net", version = "*", package = "launcher-net" }
persistence = { path = "../persistence", version = "*", package = "launcher-persistence" }
utils = { path = "../utils", version = "*", package = "launcher-utils" }

platforms = { version = "3", features = ["serde"] }
ron = "0.8"
thiserror = "2"
url = { version = "2", features = ["serde"] }
