[package]
name = "launcher-net"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
async-trait = "0.1"
bytes = "1"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["brotli", "deflate", "gzip", "json", "native-tls-alpn", "stream"] }
serde = "1"
serde_json = "1"
serde_urlencoded = "0.7"
thiserror = "1"
tokio = { version = "1", features = ["parking_lot", "sync", "time"] }
tracing = "0.1"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
