[package]
name = "launcher-net"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
bytes = "1"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["brotli", "deflate", "gzip", "json", "rustls-tls", "stream"] }
serde = "1"
serde_json = "1"
serde_urlencoded = "0.7"
thiserror = "2"
tokio = { version = "1", features = ["parking_lot", "sync", "time"] }
tracing = "0.1"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
