[package]
name = "launcher-net"
version = "0.0.1"
edition = "2024"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
bytes = "1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls", "brotli", "deflate", "gzip", "json", "stream"] }
serde = "1"
serde_json = "1"
serde_urlencoded = "0.7"
thiserror = "2"
tokio = { version = "1", features = ["parking_lot", "sync", "time"] }
tracing = "0.1"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
