[package]
name = "launcher-persistence"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
utils = { version = "*", path = "../utils", package = "launcher-utils" }

aes-gcm = "0.10"
hex = "0.4"
keyring = { version = "2", default-features = false, features = ["linux-secret-service-rt-tokio-crypto-rust"] }
serde = "1"
thiserror = "1"
tokio = { version = "1", features = ["fs", "rt", "sync"] } # rt needed for task::spawn_blocking
toml = "0.7"
tracing = "0.1"
