[package]
name = "launcher-utils"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

[features]
default = ["application"]

# Modifies logging function to be more suitable for a GUI application.
application = []

[dependencies]
atty = "0.2"
directories = "5"
md-5 = "0.10"
once_cell = "1"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["fs"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["parking_lot"] }
