[package]
name = "launcher-utils"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
directories = "5"
once_cell = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["parking_lot"] }

# archive
tar = "0.4"
xz2 = { version = "0.1", features = ["tokio"] }
zip = "2"

# crypto
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"

# platforms
platforms = "3"

macros = { path = "../macros", version = "*", package = "launcher-macros" }
